k8s/middleware-https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: statex-apps
spec:
  redirectScheme:
    scheme: https
    permanent: true
